test/ui/src/compile_fail/std/emit_props_ts_start.rs
fn main() {
    emit::emit!("template", ts_start: "2024-01-01T00:00:00.000Z");
}
